rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_record.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            ix: 0,
            len: 2,
            slice: (
                0,
                2,
            ),
            typos: 0.3,
            func: false,
            fin: true,
        },
        WordMatch {
            ix: 1,
            len: 2,
            slice: (
                0,
                2,
            ),
            typos: 0.2,
            func: false,
            fin: true,
        },
        WordMatch {
            ix: 2,
            len: 6,
            slice: (
                0,
                6,
            ),
            typos: 0.0,
            func: false,
            fin: true,
        },
    ],
    [
        WordMatch {
            ix: 0,
            len: 4,
            slice: (
                0,
                4,
            ),
            typos: 0.5,
            func: false,
            fin: true,
        },
        WordMatch {
            ix: 1,
            len: 6,
            slice: (
                0,
                6,
            ),
            typos: 0.0,
            func: false,
            fin: true,
        },
    ],
)
