rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_record_typos.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 11,
            slice: (
                0,
                11,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 5,
            slice: (
                0,
                5,
            ),
            function: false,
        },
        typos: 0.7,
        fin: true,
    },
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 11,
            slice: (
                0,
                11,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 1,
            len: 7,
            slice: (
                0,
                6,
            ),
            function: false,
        },
        typos: 0.8,
        fin: false,
    },
]
