rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_record_unfinished.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 8,
            slice: (
                0,
                8,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 5,
            slice: (
                0,
                5,
            ),
            function: false,
        },
        typos: 0.3,
        fin: true,
    },
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 8,
            slice: (
                0,
                8,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 1,
            len: 7,
            slice: (
                0,
                3,
            ),
            function: false,
        },
        typos: 0.2,
        fin: false,
    },
]
