rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_regression_2-2.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext2.to_ref(), &qtext.to_ref())"
---
(
    [],
    [],
)
