rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_joined_regression_2.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext1.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            offset: 0,
            slice: (
                0,
                4,
            ),
            subslice: (
                0,
                4,
            ),
            typos: 0.5,
            func: false,
            fin: true,
        },
    ],
    [
        WordMatch {
            offset: 0,
            slice: (
                0,
                3,
            ),
            subslice: (
                0,
                3,
            ),
            typos: 0.5,
            func: false,
            fin: true,
        },
    ],
)
