rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_pair_first.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 5,
            slice: (
                0,
                5,
            ),
            primary: true,
        },
        record: MatchSide {
            ix: 0,
            len: 6,
            slice: (
                0,
                6,
            ),
            primary: true,
        },
        typos: 1,
        fin: true,
    },
]
