rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_singleton_equality.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
(
    [
        WordMatch {
            ix: 0,
            len: 7,
            slice: (
                0,
                7,
            ),
            typos: 0.0,
            func: false,
            fin: true,
        },
    ],
    [
        WordMatch {
            ix: 0,
            len: 7,
            slice: (
                0,
                7,
            ),
            typos: 0.0,
            func: false,
            fin: true,
        },
    ],
)
