rust/core/src/matching/snapshots/lucid_suggest_core__matching__text__tests__match_text_singleton_typos.snap
---
source: src/matching/text.rs
expression: "text_match(&rtext.to_ref(), &qtext.to_ref())"
---
[
    WordMatch {
        query: MatchSide {
            ix: 0,
            len: 7,
            slice: (
                0,
                7,
            ),
            function: false,
        },
        record: MatchSide {
            ix: 0,
            len: 7,
            slice: (
                0,
                7,
            ),
            function: false,
        },
        typos: 0.5,
        fin: true,
    },
]
